fix divider gap

--- a/packages/richtext-lexical/src/features/toolbars/fixed/client/Toolbar/index.scss
+++ b/packages/richtext-lexical/src/features/toolbars/fixed/client/Toolbar/index.scss
@@ -79,7 +79,7 @@ html[data-theme='dark'] {
       width: 1px;
       height: 15px;
       background-color: var(--theme-elevation-100);
-      margin: 0 6.25px;
+      margin: 0 6.25px 0 4.25px; // substract 2px from the gap
     }
   }
 
